CKA-YAMLS/YAMLS/canary-deployments/server.yaml
apiVersion: v1
kind: Service
metadata:
name: helloworld
labels:
  app: helloworld
spec:
  selector:
    app: helloworld
...
